examples/test/testpolicy5623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5623
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key46: value19
      key10: value45
      key33: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key17: value2
          key43: value23
      podSelector:
        matchLabels:
          key43: value18
          key22: value47
          key47: value34
